--- a/SmartConvert/app/src/main/res/layout/fragment_confirm_email.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_confirm_email.xml
@@ -32,6 +32,7 @@
             android:hint="@string/verificationCodeHint"
             android:inputType="text"
             android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -47,6 +48,7 @@
             android:text="@string/verification_code_string"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/verificationField"
             app:layout_constraintLeft_toLeftOf="@+id/verificationField" />
 
