--- a/SmartConvert/app/src/main/res/layout/fragment_convert.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_convert.xml
@@ -50,8 +50,11 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="11dp"
             android:ems="10"
+            android:gravity="center_horizontal"
             android:hint="@string/amount"
             android:inputType="number"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.031"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -69,8 +72,11 @@
             android:layout_marginRight="8dp"
             android:layout_marginTop="0dp"
             android:ems="10"
+            android:gravity="center_horizontal"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat"
+            android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             android:textSize="24sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.968"
@@ -88,10 +94,27 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintVertical_bias="0.232"
+            app:layout_constraintVertical_bias="0.387"
             android:layout_marginLeft="8dp"
             app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent" />
+
+        <TextView
+            android:id="@+id/convertArrowConvert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="->"
+            android:textColor="@android:color/holo_orange_light"
+            android:textSize="24sp"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginBottom="7dp"
+            app:layout_constraintBottom_toTopOf="@+id/convertCurrButton"
+            app:layout_constraintVertical_bias="0.781" />
     </android.support.constraint.ConstraintLayout>
+
 </FrameLayout>
