--- a/SmartConvert/app/src/main/res/layout/fragment_register.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_register.xml
@@ -21,6 +21,7 @@
             android:text="@string/confirm_password_string"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passRegField" />
 
@@ -47,6 +48,7 @@
             android:hint="@string/fname_hint"
             android:inputType="textPersonName"
             android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameFirstView" />
 
@@ -62,6 +64,7 @@
             android:hint="@string/lname_hint"
             android:inputType="textPersonName"
             android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameFirstView" />
 
@@ -75,6 +78,7 @@
             android:text="@string/Lname_string"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -88,6 +92,7 @@
             android:text="@string/pass_string"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailField" />
 
@@ -103,6 +108,7 @@
             android:hint="@string/email_hint"
             android:inputType="textEmailAddress"
             android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailView" />
 
@@ -116,6 +122,7 @@
             android:text="@string/email_string"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/nameFirstField" />
 
@@ -131,6 +138,7 @@
             android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/passRegView" />
 
@@ -144,6 +152,7 @@
             android:text="@string/Fname_string"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -159,6 +168,7 @@
             android:hint="@string/password_hint"
             android:inputType="textPassword"
             android:textColor="@android:color/holo_orange_light"
+            android:textColorHint="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/confirmPassRegView" />
     </android.support.constraint.ConstraintLayout>
