--- a/SmartConvert/app/src/main/res/layout/fragment_tutorial1.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_tutorial1.xml
@@ -20,6 +20,7 @@
             android:text="@string/description_string"
             android:textColor="@android:color/black"
             android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.504"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -32,7 +33,7 @@
             android:layout_marginRight="0dp"
             android:background="?android:attr/selectableItemBackground"
             android:text=">"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -48,6 +49,7 @@
             android:text="@string/welcome_string"
             android:textColor="@android:color/black"
             android:textSize="30sp"
+            android:textStyle="bold"
             app:layout_constraintHorizontal_bias="0.505"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -61,7 +63,7 @@
             android:layout_marginRight="16dp"
             android:background="?android:attr/selectableItemBackground"
             android:text="@string/skip_string"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
