--- a/SmartConvert/app/src/main/res/layout/fragment_tutorial2.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_tutorial2.xml
@@ -18,7 +18,7 @@
             android:layout_marginRight="0dp"
             android:background="?android:attr/selectableItemBackground"
             android:text=">"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -32,7 +32,7 @@
             android:layout_marginLeft="-10dp"
             android:background="?android:attr/selectableItemBackground"
             android:text="&lt;"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -47,7 +47,7 @@
             android:layout_marginRight="16dp"
             android:background="?android:attr/selectableItemBackground"
             android:text="@string/skip_string"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
@@ -87,13 +87,14 @@
             android:id="@+id/currBTutorialView"
             android:layout_width="145dp"
             android:layout_height="19dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginRight="16dp"
             android:gravity="center"
             android:text="@string/euro_curr_string"
             android:textColor="@android:color/black"
-            app:layout_constraintBottom_toTopOf="@+id/currBFormTutorial"
-            app:layout_constraintRight_toRightOf="parent" />
+            android:textStyle="bold"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="70dp" />
 
         <Button
             android:id="@+id/convertButton"
@@ -105,14 +106,13 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.315" />
+            app:layout_constraintVertical_bias="0.393" />
 
         <EditText
             android:id="@+id/currBFormTutorial"
             android:layout_width="145dp"
             android:layout_height="39dp"
             android:layout_marginRight="16dp"
-            android:layout_marginTop="87dp"
             android:drawableBottom="@android:color/black"
             android:editable="false"
             android:ems="10"
@@ -122,14 +122,14 @@
             android:text="@string/example_amount_2_string"
             android:textColor="@android:color/holo_orange_light"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/currBTutorialView" />
 
         <EditText
             android:id="@+id/currAFormTutorial"
             android:layout_width="145dp"
             android:layout_height="39dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="87dp"
             android:drawableBottom="@android:color/black"
             android:editable="false"
             android:ems="10"
@@ -140,31 +140,33 @@
             android:text="@string/example_amount_1_string"
             android:textColor="@android:color/holo_orange_light"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/currATutorialView" />
 
         <TextView
             android:id="@+id/currATutorialView"
             android:layout_width="145dp"
             android:layout_height="19dp"
-            android:layout_marginBottom="8dp"
             android:layout_marginLeft="16dp"
             android:gravity="center"
             android:text="@string/american_curr_string"
             android:textColor="@android:color/black"
-            app:layout_constraintBottom_toTopOf="@+id/currAFormTutorial"
-            app:layout_constraintLeft_toLeftOf="parent" />
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="70dp" />
 
         <TextView
             android:id="@+id/convertArrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="->"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="24sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/currBFormTutorial"
-            android:layout_marginTop="8dp" />
+            app:layout_constraintTop_toTopOf="@+id/currBFormTutorial" />
 
     </android.support.constraint.ConstraintLayout>
 
