--- a/SmartConvert/app/src/main/res/layout/fragment_tutorial3.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_tutorial3.xml
@@ -18,7 +18,7 @@
             android:layout_marginLeft="-10dp"
             android:background="?android:attr/selectableItemBackground"
             android:text="&lt;"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@android:color/holo_orange_light"
             android:textSize="36sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -33,7 +33,7 @@
             android:layout_marginRight="16dp"
             android:background="?android:attr/selectableItemBackground"
             android:text="@string/skip_string"
-            android:textColor="@color/colorPrimary"
+            android:textColor="@android:color/holo_orange_light"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
@@ -68,5 +68,72 @@
                 android:checked="true"
                 android:enabled="false" />
         </RadioGroup>
+
+        <RadioGroup
+            android:layout_width="272dp"
+            android:layout_height="257dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/radioGroup">
+
+            <RadioButton
+                android:id="@+id/radioButton4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:editable="false"
+                android:text="@string/end_tutorial_first_string"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                tools:layout_editor_absoluteY="113dp" />
+
+            <RadioButton
+                android:id="@+id/radioButton7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:editable="false"
+                android:text="@string/end_tutorial_second_string"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <RadioButton
+                android:id="@+id/radioButton6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:editable="false"
+                android:text="@string/end_tutorial_third_string"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <RadioButton
+                android:id="@+id/radioButton5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:editable="false"
+                android:text="@string/end_tutorial_fourth_string"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/end_tutorial_fifth_string"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
