--- a/SmartConvert/app/src/main/res/layout/fragment_setting.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_setting.xml
@@ -12,22 +12,40 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/defCountryName"
+            android:id="@+id/settingHeadline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginTop="8dp"
+            android:text="@string/settingsString"
+            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.028"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.017" />
+
+        <TextView
+            android:id="@+id/defCountryName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginTop="8dp"
             android:text="countryNameHere"
             android:textAppearance="@style/TextAppearance.AppCompat"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.695"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.016" />
+            app:layout_constraintVertical_bias="0.114"
+            app:layout_constraintLeft_toRightOf="@+id/defaultCountry"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintHorizontal_bias="0.014" />
 
         <TextView
             android:id="@+id/defaultCountry"
@@ -44,8 +62,8 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
-            app:layout_constraintHorizontal_bias="0.032"
-            app:layout_constraintVertical_bias="0.016" />
+            app:layout_constraintHorizontal_bias="0.034"
+            app:layout_constraintVertical_bias="0.114" />
 
         <TextView
             android:id="@+id/curCountry"
@@ -59,11 +77,11 @@
             android:textAppearance="@style/TextAppearance.AppCompat"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.033"
+            app:layout_constraintHorizontal_bias="0.036"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.099" />
+            app:layout_constraintVertical_bias="0.192" />
 
         <TextView
             android:id="@+id/curCountryName"
@@ -74,14 +92,14 @@
             android:textSize="18sp"
             android:layout_marginRight="8dp"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="8dp"
-            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginBottom="8dp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="8dp"
-            app:layout_constraintHorizontal_bias="0.751"
-            app:layout_constraintVertical_bias="0.099" />
+            app:layout_constraintVertical_bias="0.192"
+            app:layout_constraintLeft_toRightOf="@+id/curCountry"
+            android:layout_marginLeft="8dp"
+            app:layout_constraintHorizontal_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
 
