--- a/SmartConvert/app/src/main/res/menu/activity_main_drawer.xml
+++ b/SmartConvert/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,29 +7,17 @@
             android:icon="@drawable/profile"
             android:title="@string/profile_navText" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_history"
+            android:icon="@android:drawable/ic_menu_recent_history"
+            android:title="@string/history_Text" />
     </group>
 
-    <item android:title="Communicate">
+    <item android:title="@string/exitText">
         <menu>
             <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/logout"
+                android:title="@string/logoutText" />
         </menu>
     </item>
 
