--- a/SmartConvert/app/src/main/res/layout/fragment_profile.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="group6.tcss450.uw.edu.smartconvert.ProfileFragment">
+    tools:context="group6.tcss450.uw.edu.smartconvert.fragments.ProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
