--- a/SmartConvert/app/src/main/res/layout/fragment_tutorial2.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_tutorial2.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="group6.tcss450.uw.edu.smartconvert.Tutorial2Fragment">
+    tools:context="group6.tcss450.uw.edu.smartconvert.fragments.Tutorial2Fragment">
 
 
     <android.support.constraint.ConstraintLayout
