--- a/SmartConvert/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_edit_profile.xml
@@ -96,17 +96,15 @@
             app:layout_constraintBaseline_toBaselineOf="@+id/Profile_LName"
             app:layout_constraintRight_toRightOf="parent" />
 
-        <EditText
-            android:id="@+id/emailEdit"
+        <TextView
+            android:id="@+id/emailEditView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="41dp"
-            android:layout_marginRight="41dp"
-            android:ems="10"
-            android:hint="@string/email_hint"
-            android:inputType="textWebEmailAddress"
-            app:layout_constraintBaseline_toBaselineOf="@+id/Profile_Email"
-            app:layout_constraintRight_toRightOf="parent" />
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="13dp"
+            android:text="TextView"
+            app:layout_constraintLeft_toLeftOf="@+id/lastNameEdit"
+            app:layout_constraintTop_toBottomOf="@+id/lastNameEdit" />
 
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
