--- a/SmartConvert/app/src/main/res/layout/fragment_start.xml
+++ b/SmartConvert/app/src/main/res/layout/fragment_start.xml
@@ -10,6 +10,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ImageView
+            android:id="@+id/logoImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="logo"
+            app:srcCompat="@drawable/logo" />
+
         <Button
             android:id="@+id/loginStartButton"
             android:layout_width="230dp"
@@ -25,11 +32,12 @@
             android:id="@+id/skipLoginButton"
             android:layout_width="105dp"
             android:layout_height="48dp"
+            android:layout_marginLeft="0dp"
+            android:layout_marginStart="0dp"
             android:layout_marginTop="8dp"
             android:text="@string/skip_string"
-            app:layout_constraintTop_toBottomOf="@+id/loginStartButton"
-            android:layout_marginLeft="0dp"
-            app:layout_constraintLeft_toLeftOf="@+id/loginStartButton" />
+            app:layout_constraintLeft_toLeftOf="@+id/loginStartButton"
+            app:layout_constraintTop_toBottomOf="@+id/loginStartButton" />
 
         <Button
             android:id="@+id/registerStartButton"
@@ -41,19 +49,6 @@
             android:text="@string/register_string"
             app:layout_constraintLeft_toRightOf="@+id/skipLoginButton"
             app:layout_constraintTop_toBottomOf="@+id/loginStartButton" />
-
-        <TextView
-            android:id="@+id/appNameView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/app_name"
-            android:textColor="@android:color/black"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/loginStartButton"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
