--- a/SmartConvert/app/src/main/res/menu/activity_main_drawer.xml
+++ b/SmartConvert/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,13 +3,12 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/nav_main"
+            android:title="@string/home_Text" />
+        <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/profile"
             android:title="@string/profile_navText" />
-        <item
-            android:id="@+id/nav_history"
-            android:icon="@android:drawable/ic_menu_recent_history"
-            android:title="@string/history_Text" />
     </group>
 
     <item android:title="@string/exitText">
